tests/rascal/negative/type_errors/L1/20_expression_ES10_D4_16.ob
MODULE Test20;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               q := ((((z DIV 2) - (y - x)) - 1) < (200 - (- (1223 * 2))));
               x := (1 * ((- z) - (z MOD 1)));
               x := 1223;
               y := 1;
               q := (z = 2);
               r := (2 < z);
               p := ((1 * 1223) >= z);
               z := y;
               r := (((1 + 1) > 1223) & (200 = y));
  (* error *)  r := ((+ 1) = y)
END Test20.